--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,12 +20,23 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "8000:8000"
+      - "443:443"
+      - "80:80"
     volumes:
       - ./project:/var/www
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/prod/conf.d/:/etc/nginx/conf.d/
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - certbot
     networks:
       - app-network
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
   db:
     image: mysql:5.7
     container_name: db
