--- a/php/local.ini
+++ b/php/local.ini
@@ -1,3 +1,5 @@
 cgi.fix_pathinfo=0
-upload_max_filesize=40M
-post_max_size=40M
+upload_max_filesize=500M
+post_max_size=500M
+
+output_buffering = On
